--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <root></root>
+  <app-root></app-root>
 </body>
 </html>
